# Gestion_de_una_Biblioteca

./: .env  .gitignore  README.md  app.py  biblioteca.py  claves.env  config.py  crear_admin.py  estilo.py  extensions.py  gestion_biblioteca_ejercicio_fin_de_curso.py  iniciar_base_de_datos.py  libro.py  main.py  menu.py  prueba_correo.py  pyproject.toml  requirements.txt
migrations/: env.py
migrations/versions/: ebbd4bad22bd_crear_tablas_iniciales.py
modules/: auth.py  forms.py  models.py  models_libro.py  models_prestamo.py  models_reserva.py  models_usuario.py  permissions.py  routes.py  routes_auth.py  routes_generales.py  routes_libros.py  routes_prestamos.py  routes_usuarios.py
modulos/: biblioteca.py  libro.py  main.py
src/: __init__.py  auth.py  biblioteca.py  estilo.py  main.py  menu.py  permissions.py
src/forms/: forms.py
src/models/: __init__.py  (+4 more)
templates/:  recuperar_cuenta.html  _breadcrumbs.html  agregar_libro.html  autores.html  base.html  buscar_libro.html  confirmar_email.html  crear_usuario.html  devolver_libro.html  editar_libro.html  editar_libro_lista.html  editar_rol.html  eliminar_libro.html  eliminar_libro_lista.html  error.html  generos.html  gestion_libros.html  gestion_usuarios.html  gestionar_prestamos.html  gestionar_usuarios.html  historial.html  historial_prestamos.html  importar_datos.html  index.html  login.html  prestar_libro.html  recordatorios.html  recuperar_cuenta.html  registro.html  reservar_libro.html  reservas_pendientes.html  restablecer_contrasena.html  titulos.html
tests/: test_models.py    test_routes.py
(+10 files in other folders)
